objects/AttributesWeighing__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>#Sprint16 #Marketing Tabla de ponderación de atributos para Account y Contact</description>
    <fields>
        <fullName>Attribute__c</fullName>
        <description>Attribute Name</description>
        <label>Attribute</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>Salesforce Object</description>
        <label>Object</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weighing__c</fullName>
        <description>Attribute weighing</description>
        <label>Weighing</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Ponderación de Atributos</label>
</CustomObject>